# scholar-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg  start.bat  start.sh  test_personality.py
.github/workflows/: ci.yml
bridge/: index.js  package-lock.json  package.json
docs/: ARCHITECTURE.md  implementation_plan.md
prompts/: soul.md.example  system.txt
src/scholar_tracker/: __init__.py  config.py
src/scholar_tracker/models/: __init__.py  database.py  schemas.py
src/scholar_tracker/routes/: __init__.py  chat.py  webhook.py
src/scholar_tracker/services/: __init__.py  fun_jokes.py  fun_quotes.py  llm.py  notifier.py  scheduler.py  scraper.py
src/scholar_tracker/utils/: __init__.py  logger.py
tests/: conftest.py  test_db.py  test_ui_api.py  test_webhook.py
ui/: index.html
